added emissions calculator
